derive/tests/ui/trait-attr-named-params-on-server.stderr
error: custom attribute panicked
 --> $DIR/trait-attr-named-params-on-server.rs:3:1
  |
3 | #[rpc(server, params = "named")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Server code generation only supports `params = "positional"` (default) or `params = "raw" at this time.
