derive/tests/ui/trait-attr-named-params-on-server.rs
use jsonrpc_derive::rpc;

#[rpc(server, params = "named")]
pub trait Rpc {
}

fn main() {}
